--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
 
   otp_pin_field:
-    path: '../../otp_pin_field'
+    path: '../../otp_pin_fieldGit'
 
 
   # The following adds the Cupertino Icons font to your application.
