--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -27,6 +27,10 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 34
+    // Conditional for compatibility with AGP <4.2.
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.shivammishra.example_otp_pin_field'
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
