--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: otp_pin_field
 description: A flutter package which will help you to generate pin code fields with beautiful design and animations. Can be useful for OTP or pin code inputs.
-version: 1.4.0
-homepage: https://github.com/shivbo96/otp_pin_field
+version: 1.4.1
+repository: https://github.com/shivbo96/otp_pin_field
+homepage: https://www.techaheadcorp.com/
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
